BUG Fixes And Style

--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -50,7 +50,7 @@
 
 
 <form id=form method=GET action=/api/search>
-<input name=q id=query >
+<input name=q id=query style="width: 90vw">
 <button id=submit>submit</button>
 </form>
 
